030-software/fluxcd/apps/konflate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konflate
  labels:
    app: konflate
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: konflate
  template:
    metadata:
      labels:
        app: konflate
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: konflate
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: konflate
      containers:
        - name: konflate
          image: ghcr.io/home-operations/konflate:0.6.4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: metrics
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 1024Mi
          volumeMounts:
            - mountPath: /tmp
              name: work
      volumes:
        - name: work
          emptyDir:
            medium: Memory
