030-software/fluxcd/apps/konflate/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: konflate
  annotations:
    dashboard.${domain}/icon: github
    dashboard.${domain}/name: konflate
    dashboard.${domain}/url: https://konflate.${domain}
spec:
  hostnames:
    - konflate.${domain}
  parentRefs:
    - name: cilium
      namespace: cilium
  rules:
    - backendRefs:
        - name: konflate
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
